2010-05-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Highlight TODO.

	*: Refactor c include dirs.

2010-05-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Create imenu menu for makefile-mode.
	("whitespace"): Hack whitespace-post-command-hook for emacs-23.2.
	(whitespace-style): Don't display space-before-tab and space-after-tab.
	: Turn auto-image-file-mode.

2010-05-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add TODO|FIXME to font lock keyword.

2010-05-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (show-trailing-whitespace): Close
	show-trailing-whitespace, use whitespace-mode instead.
	: whitespace-mode: don't display newline-mark.
	(tab-width): Set default tab-width to 4.
	(whitespace-style): don't display indentation.

2010-05-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Compilation with offical CEDET and buildin CEDET.
	: Better compilation with offical CEDET and buildin CEDET.
	: Disable gud-tooltip-mode.

2010-05-10  Meteor Liu  <meteor1113@gmail.com>

	* lisp/semantic-tag-folding.el: Remove.

2010-05-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Compilation with emacs-23.2

2010-05-08  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Set pulse advice for highlight-symbol-next and highlight-symbol-prev.
	: Set auto-complete for semantic compatible with official cedet
	and build in cedet.

	* README: Add.

	* init-misc.el: Bind M-n to ac-complete-semantic.
	: Set auto-complete for python using ropemacs.

	* init-site.el: Add pluse advice for viss-bookmark-next-buffer and viss-bookmark-prev-buffer.

	* init-misc.el: Bind <left-margin> <mouse-1/2> to bm-toggle-mouse,
	<left-margin> <mouse-3> to bm-next-mouse.

2010-05-07  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Initialize auto-complete for python using ropemacs.

	* init-basic.el: Set mouse-avoidance-mode to none.
	: Enable linum-mode in windows.

	* init-misc.el: Edit ac-prefix-c-dot for :: in C++.